--- a/css/pridefall.css
+++ b/css/pridefall.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-.window-app .window-content{background: none;}
+.pridefall .window-content{background: none;}
 .Liber .items-list .item-description,.Liber .items-list .item-description2,.Liber .items input.armed,.Liber .items input.charged,.Liber .items input.autrequi,.Liber .items input.armurequi,.Liber .items input.bouclierqui,.Liber .talentliste,.Liber .faiblesseliste,.Liber .carac input[type="text"].talent,.Liber .carac input[type="text"].faiblesse,.Liber .tabs,.Liber a.item.Liber .stat input,.Liber .stat2 input,.Liber .features input,.Liber .head,.Liber header,.Liber h2  {background:#091a0a}/*titre #09141a*/
 .Liber a.active,.Liber a.item.active:hover,.Liber textarea,.Liber main,.Liber .head .rexrow{background:#1c3830;}/*font  #253745*/
 .Liber .autres{background:#1c3830 url(font.png) bottom right no-repeat;}
@@ -167,3 +167,4 @@ form.Liber{display: table-cell;}
 .action5{background: darkgrey url(../assets/icon/horsmap.png) center center no-repeat;background-size: contain;cursor: pointer}
 .action6{background: darkgrey url(../assets/icon/couvert.png) center center no-repeat;background-size: contain;cursor: pointer}
 .jetdedes,.item-equip{cursor: pointer}
+.Liber .stat0 {border: none;background: #e13b23;color: #fff;}
