--- a/templates/sheets/personnage-sheet.html
+++ b/templates/sheets/personnage-sheet.html
@@ -41,19 +41,19 @@
 				</div>
 				<div class="clear"></div>
 				<div class="grid-4col">
-					<h2 style="text-align: center;"><button class="jetdedes" data-name="{{localize 'libersf.stat1'}}" data-comp="{{data.system.stat1}}" data-attDice="0">{{localize 'libersf.stat1'}}</button></h2>
+					<h2 style="text-align: center;"><button class="stat0 jetdedes" data-name="{{localize 'libersf.stat1'}}" data-comp="{{data.system.stat1}}" data-attDice="0">{{localize 'libersf.stat1'}}</button></h2>
 					<input class="stat" name="system.stat1" type="text" value="{{data.system.stat1}}" placeholder="0" style="position: relative;left: calc(50% - 20px);"/>
 				</div>
 				<div class="grid-4col">
-					<h2 style="text-align: center;"><button class="jetdedes" data-name="{{localize 'libersf.stat2'}}" data-comp="{{data.system.stat2}}" data-attDice="0">{{localize 'libersf.stat2'}}</button></h2>
+					<h2 style="text-align: center;"><button class="stat0 jetdedes" data-name="{{localize 'libersf.stat2'}}" data-comp="{{data.system.stat2}}" data-attDice="0">{{localize 'libersf.stat2'}}</button></h2>
 					<input class="stat" name="system.stat2" type="text" value="{{data.system.stat2}}" placeholder="0" style="position: relative;left: calc(50% - 20px);"/>
 				</div>
 				<div class="grid-4col">
-					<h2 style="text-align: center;"><button class="jetdedes" data-name="{{localize 'libersf.stat3'}}" data-comp="{{data.system.stat3}}" data-attDice="0">{{localize 'libersf.stat3'}}</button></h2>
+					<h2 style="text-align: center;"><button class="stat0 jetdedes" data-name="{{localize 'libersf.stat3'}}" data-comp="{{data.system.stat3}}" data-attDice="0">{{localize 'libersf.stat3'}}</button></h2>
 					<input class="stat" name="system.stat3" type="text" value="{{data.system.stat3}}" placeholder="0" style="position: relative;left: calc(50% - 20px);"/>
 				</div>
 				<div class="grid-4col">
-					<h2 style="text-align: center;"><button class="jetdedes" data-name="{{localize 'libersf.stat4'}}" data-comp="{{data.system.stat4}}" data-attDice="0">{{localize 'libersf.stat4'}}</button></h2>
+					<h2 style="text-align: center;"><button class="stat0 jetdedes" data-name="{{localize 'libersf.stat4'}}" data-comp="{{data.system.stat4}}" data-attDice="0">{{localize 'libersf.stat4'}}</button></h2>
 					<input class="stat" name="system.stat4" type="text" value="{{data.system.stat4}}" placeholder="0" style="position: relative;left: calc(50% - 20px);"/>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 		<div class="autres">
 			{{!-- Sheet Tab Navigation --}}
 		    <nav class="sheet-tabs tabs" data-group="primary">
-		        <a class="item active" data-tab="features"><span>{{localize 'libersf.cpt'}}</span></a><a class="item" data-tab="items"><span>{{localize 'libersf.inv'}}</span></a><a class="item" data-tab="lab">⚙</a>
+		        <a class="item active" data-tab="features"><span>{{localize 'libersf.cpt'}}</span></a><a class="item" data-tab="items"><span>{{localize 'libersf.inv0'}}</span></a><a class="item" data-tab="lab">⚙</a>
 		    </nav>
 		    {{!-- Sheet Body --}}
 			<section class="sheet-body" style="overflow: hidden;height: 717px;">
@@ -142,10 +142,10 @@
 
 				{{!-- Items Tab --}}
 				<div id="items" class="tab items" data-group="primary" data-tab="items">
-					<div class="encom"><div class="barenc"></div>
+					<!--div class="encom"><div class="barenc"></div>
 						<p>{{localize 'libersf.encombrement'}} <input class="encours" name="system.encombrement.value" type="text" value="{{data.system.encombrement.value}}" placeholder="0" style="width: 40px;" readonly=""/> / 
 						<input class="enc" name="system.encombrement.max" type="text" value="{{data.system.encombrement.max}}" placeholder="0" style="width: 40px;" readonly="" /> {{localize 'libersf.kg'}}</p>
-					</div>
+					</div-->
 					<div class="flexrow">
 						<div class="grid-3col" style="text-align: center">
 							<span class="icongun"></span><input  class="armed" name="system.armed" type="text" value="{{data.system.armed}}" title="{{data.system.armed}}" placeholder="Arme" readonly="" /><input  class="degatd" name="system.degatd" value="{{data.system.degatd}}" readonly="" style="display: none;"/><button class="desequi" data-genre="arme">🗑</button>
@@ -266,6 +266,40 @@
 			                </li>
 			            {{/each}}
 		        		</ol>
+		        		<h2 style="margin-top: 20px">{{localize 'libersf.inv2'}} <a class="item-control item-create" title="Create Item" data-type="objet" style="float: right;"><i class="fas fa-plus"></i></a></h2>
+						<ol class="items-list">
+			                <li class="item rexrow item-header">
+			                  <div class="item-image"></div>
+			                  <div class="item-name2">{{localize 'libersf.nom'}}</div>
+			                  <div class="item-genre"></div>
+			                  <!--div class="item-description2">{{localize 'libersf.descri'}}</div-->               
+			                  <div class="item-poids">{{localize 'libersf.l3'}}</div>
+			                  <div class="item-valeur">{{localize 'libersf.l4'}}</div>
+			                  <div class="item-techno">{{localize 'libersf.l5'}}</div>
+			                  <div class="item-qty">{{localize 'libersf.l6'}}</div>
+			                  <div class="item-controls">
+			                    <!--a class="item-control item-create" title="Create item" data-type="armes"><i class="fas fa-plus"></i> Add item</a-->
+			                  </div>
+			                </li>
+			            {{#each actor.consommable as |item id|}}
+			                <li class="item rexrow" data-item-id="{{item._id}}">
+			                    <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></div>
+			                    <h4 class="item-name2" title="{{item.name}}">{{item.name}}</h4>
+			                    <h4 class="item-genre" title="{{item.system.genre}}">{{item.system.genre}}</h4>
+			                    <h4 class="item-poid">{{item.system.poids}}</h4>
+			                    <h4 class="item-valeur">{{item.system.valeur}}</h4>
+			                    <h4 class="item-techno">{{item.system.techno}}</h4>
+			                    <h4 class="item-qt">{{item.system.quantite}}</h4>
+			                    <div class="item-controls">
+			                    	<span class="item-equip" title="Equipé Chargeur" genre="{{item.system.genre}}" name="{{item.name}}" data-name="{{item.name}}" data-genre="{{item.system.genre}}">+</span>
+			                    	<a class="item-control item-desc" title="Desc Sort">&#128712;</a>
+			                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+			                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+			                    </div>
+			                    <h4 class="item-description2" title="{{item.system.description}}">{{item.system.description}}</h4>
+			                </li>
+			            {{/each}}
+		        		</ol>
 				    	<h2 style="margin-top: 20px">{{localize 'libersf.inv'}} <a class="item-control item-create" title="Create Item" data-type="objet" style="float: right;"><i class="fas fa-plus"></i></a></h2>
 						<ol class="items-list">
 			                <li class="item rexrow item-header">
@@ -303,51 +337,7 @@
 		        	</div>
 				</div>
 
-				{{!-- Spell Tab --}}
-				<div id="magie" class="tab items " data-group="primary" data-tab="magie">   
-					<div style="overflow: auto;height: 554px;w">
-						<h2 style="margin-top: 20px">{{localize 'libersf.sort'}}</h2>
-						<ol class="items-list">
-			                <li class="item rexrow item-header">
-			                  <div class="item-image"></div>
-			                  <div class="item-name">{{localize 'libersf.nom'}}</div>
-			                  <div class="item-genre"></div>
-			                  <!--div class="item-description">{{localize 'libersf.descri'}}</div-->               
-			                  <div class="item-portee">{{localize 'libersf.l1'}}</div>
-			                  <div class="item-dommage">{{localize 'libersf.l2'}}</div>
-			                  <div class="item-poids">{{localize 'libersf.l3'}}</div>
-			                  <div class="item-valeur">{{localize 'libersf.l4'}}</div>
-			                  <div class="item-techno">{{localize 'libersf.l5'}}</div>
-			                  <div class="item-qty">{{localize 'libersf.l6'}}</div>
-			                  <div class="item-controls">
-			                    <!--a class="item-control item-create" title="Create item" data-type="armes"><i class="fas fa-plus"></i> Add item</a-->
-			                  </div>
-			                </li>
-			            {{#each actor.sort as |item id|}}
-			                <li class="item rexrow" data-item-id="{{item._id}}">
-			                    <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></div>
-			                    <div class="item-name" title="{{item.name}}">{{item.name}}</div>
-			                    <div class="item-genre" title="{{item.system.genre}}">{{item.system.genre}}</div>
-			                    <div class="item-portee">{{item.system.portee}}</div>
-			                    <!--div class="item-dommage jetdedegat" data-name="{{item.name}}" data-dice="{{item.system.degat}}">{{item.system.degats}}</div-->
-			                    <div class="item-dommage">{{item.system.degats}}</div>
-			                    <div class="item-poid">{{item.system.poids}}</div>
-			                    <div class="item-valeur">{{item.system.valeur}}</div>
-			                    <div class="item-techno">{{item.system.techno}}</div>
-			                    <div class="item-qt">{{item.system.quantite}}</div>
-			                    <div class="item-controls">
-			                    	<span class="item-equip" title="Equipé arme" genre="arme" data-genre="arme" name="{{item.name}}" data-name="{{item.name}}">+</span>
-			                    	<a class="item-control item-desc" title="Desc Sort">&#128712;</a>
-			                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-			                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-			                    </div>
-			                    <div class="item-description" title="{{item.system.description}}">{{item.system.description}}</div>
-
-			                </li>
-			            {{/each}}
-		        		</ol>
-		        	</div>
-				</div>
+				
 
 				{{!-- Lab Tab --}}
 				<div id="lab" class="tab stats" data-group="primary" data-tab="lab">
