--- a/css/pridefall.css
+++ b/css/pridefall.css
@@ -42,7 +42,7 @@ form.Liber{display: table-cell;}
 .Liber .deno{width: 175px;border-bottom: 1px solid #6a7885;padding: 0px;display: block;margin: 0 5px 5px 5px;height: 28px;float: left;}
 .Liber .stat input,.Liber .stat2 input,.Liber .features input{margin:0;display: inline-block;float: left;height: 28px;width: 40px;color:#fff;text-align: center;}
 .Liber .stat input.hp,.Liber .stat input.actarm, .Liber .stat input.actbou, .Liber .stat input.protection, .Liber .stat2 input{border: 1px solid #6a7885;}
-.Liber .stat input.hpmax,.Liber .stat input.actarmmax,.Liber .stat input.actboumax{border-top: 1px solid #6a7885;border-bottom:1px solid #6a7885;border-right: 1px solid #6a7885; border-left:none}
+.Liber .stat input.hpmax,.Liber .stat input.actarmmax,.Liber .stat input.actboumax{border: 1px solid #6a7885;}
 .Liber .second{padding-top: 5px}
 .Liber .stat2 input,.Liber .stat2 label{margin-left:calc(50% - 20px);margin-top: 0}
 .Liber .stat2 p{text-align: center;margin-bottom: 0}
@@ -150,7 +150,7 @@ form.Liber{display: table-cell;}
 .Liber .armcl{background: url("../assets/icon/armure.png")no-repeat left center;background-size: contain; }
 .Liber .boucl{background: url("../assets/icon/bouclier.png")no-repeat left center; background-size: contain;}
 .Liber .viecl{background: url("../assets/icon/vie.png")no-repeat left center;background-size: contain;color: #fff;padding-left: 58px;border: none;width: 174px;height: 71px;font-size: 2.5em;}
-.Liber .carac,.Liber .items,.Liber .spells,.Liber .stats {display: none; overflow: auto;}
+.Liber .carac,.Liber .items,.Liber .stats {display: none; overflow: auto;}
 .resultat{text-align: center;color: #fff;padding: 5px;border: 1px solid #999;}
 .resultdeg,.resultdeg2,.resultdeg3,.resultdeg4{width: 60px;height: 60px;margin: 5px;}
 .resultdeg{font-size: 4em;text-align: center;line-height: normal;background: darkgrey url(../assets/icon/gunshot.png) center center no-repeat;background-size: contain;}
