--- a/templates/sheets/personnage-sheet.html
+++ b/templates/sheets/personnage-sheet.html
@@ -11,16 +11,16 @@
 					<input class="nomperso" name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
 					<div class="rexrow">
 						<div class="grid-3col">			
-							<p>{{localize 'libersf.race'}} : <input class="race" type="text" value="{{data.system.race}}" placeholder="Race" readonly /></p>
+							<p>{{localize 'libersf.race'}} : <input class="race" type="text" value="{{data.system.race}}" placeholder="Race"/></p>
 						</div>
 						<div class="grid-3col">
-							<p>{{localize 'libersf.metier'}} : <input class="metier" type="text" value="{{data.system.metier}}" placeholder="Clan" readonly /></p>
+							<p>{{localize 'libersf.metier'}} : <input class="metier" type="text" value="{{data.system.metier}}" placeholder="Métier" /></p>
 						</div>
 						<div class="grid-3col">
-							<p>{{localize 'libersf.faction'}} : <input class="faction" type="text" value="{{data.system.religion}}" placeholder="Faction  - Religion" readonly /></p>
+							<p>{{localize 'libersf.faction'}} : <input class="faction" type="text" value="{{data.system.religion}}" placeholder="Faction"/></p>
 						</div>
 						<!--div class="separator"></div-->
-						<p>{{localize 'libersf.bonus'}} : <input class="bonusrace" title="{{data.system.bonusrace}}" name="system.bonusrace" type="text" value="{{data.system.bonusrace}}" placeholder="Bonus" style="width: 158px" readonly/> <input class="bonusmetier" title="{{data.system.bonusmetier}}" name="system.bonusmetier" type="text" value="{{data.system.bonusmetier}}" placeholder="bonusmetier" style="width: 158px" readonly />{{localize 'libersf.level'}} : <input class="niveau" name="system.level" type="text" value="{{data.system.level}}" placeholder="1"/></p>
+						{{localize 'libersf.level'}} : <input class="niveau" name="system.level" type="text" value="{{data.system.level}}" placeholder="1"/></p>
 					</div>
 					
 				</div>
@@ -36,8 +36,8 @@
 					<span class="deno andromede">☀ {{localize 'libersf.psy'}}</span><input class="psy andromede" name="system.psy.value" type="text" value="{{data.system.psy.value}}" placeholder="10" style="width: 40px;"/><input class="psymax andromede" name="system.psy.max" type="text" value="{{data.system.psy.max}}" placeholder="10" style="width: 40px;"/></p>
 				</div>
 				<div class="grid-2col">
-					<p><span class="deno">⛉ {{localize 'libersf.armure'}}</span><input class="actarm" name="system.armure.value" type="text" value="{{data.system.armure.value}}" placeholder="0"/><input class="actarmmax" name="system.armure.max" type="text" value="{{data.system.armure.max}}" placeholder="0" readonly/><span class="update">&#128472;</span>
-					<span class="deno">⛉ {{localize 'libersf.bouclier'}}</span><input class="actbou" name="system.protections.value" type="text" value="{{data.system.protections.value}}" placeholder="0"/><input  class="actboumax" name="system.protections.max" type="text" value="{{data.system.protections.max}}" placeholder="0" readonly/><span class="update">&#128472;</span></p>
+					<p><span class="deno">⛉ {{localize 'libersf.armure'}}</span><input class="actarmmax" name="system.armure.max" type="text" value="{{data.system.armure.max}}" placeholder="0"/>
+					<span class="deno">⛉ {{localize 'libersf.bouclier'}}</span><input  class="actboumax" name="system.protections.max" type="text" value="{{data.system.protections.max}}" placeholder="0"/></p>
 				</div>
 				<div class="clear"></div>
 				<div class="grid-4col">
@@ -64,7 +64,7 @@
 		<div class="autres">
 			{{!-- Sheet Tab Navigation --}}
 		    <nav class="sheet-tabs tabs" data-group="primary">
-		        <a class="item active" data-tab="features"><span>{{localize 'libersf.cpt'}}</span></a><a class="item" data-tab="items"><span>{{localize 'libersf.inv0'}}</span></a><a class="item" data-tab="lab">⚙</a>
+		        <a class="item active" data-tab="features"><span>{{localize 'libersf.cpt'}}</span></a><a class="item" data-tab="items"><span>{{localize 'libersf.inv0'}}</span></a><a class="item" data-tab="magie"><span>{{localize 'libersf.magie'}}</span></a>
 		    </nav>
 		    {{!-- Sheet Body --}}
 			<section class="sheet-body" style="overflow: hidden;height: 717px;">
@@ -126,18 +126,7 @@
 					<div class="compt"><button class="jetdedes" data-name="Psionique" data-comp="{{data.system.stat4}}" data-attDice="{{data.system.Perception}}">{{localize 'libersf.perc'}}</button>
 					<input class="cpt17" name="system.Perception" type="text" value="{{data.system.Perception}}" placeholder="{{data.system.Perception}}" style="text-align: center"/>
 					</div>
-					<div class="clear"></div>
-					
-					
-					<div class="grid-2col" style="margin-top: 20px">
-						<h2 style="text-align:center">{{localize 'libersf.restant'}}</h2>
-						<input class="pointrestant" style="width:150px;border: none;background: none; font-size: 50px;height:50px;color: #fff; text-align: center;margin-left: calc(50% - 75px);" type="text" value="0" readonly/>
-					</div>
-					<div class="grid-2col" style="margin-top: 20px">
-						<h2 style="text-align:center">{{localize 'libersf.bonusmj'}}</h2>
-						<input class="malussactor" style="width:150px;border: none;background: none; font-size: 50px;height:50px;color: #fff; text-align: center;margin-left: calc(50% - 75px);" name="system.malus" type="text" value="{{data.system.malus}}" placeholder="0"/>
-					</div>
-					
+					<div class="clear"></div>	
 				</div>
 
 				{{!-- Items Tab --}}
@@ -339,57 +328,50 @@
 
 				
 
-				{{!-- Lab Tab --}}
-				<div id="lab" class="tab stats" data-group="primary" data-tab="lab">
-					<h2 style="margin-top: 20px">{{localize 'libersf.race'}}</h2>
-					<SELECT class="raceliste" size="1" style="width: 50%; margin: 3px;background: #0d0d0d;color: #fff;" name="system.race">
-						{{#select data.system.race}}
-		                    <option value="{{localize 'libersf.humain'}}">{{localize 'libersf.humain'}}</option>
-		                    <option value="{{localize 'libersf.pleiadiens'}}">{{localize 'libersf.pleiadiens'}}</option>
-		                    <option value="{{localize 'libersf.artu'}}">{{localize 'libersf.artu'}}</option>
-		                    <option value="{{localize 'libersf.yor'}}">{{localize 'libersf.yor'}}</option>
-		                    <option value="{{localize 'libersf.dragon'}}">{{localize 'libersf.dragon'}}</option>
-		                    <option value="{{localize 'libersf.elf'}}">{{localize 'libersf.elf'}}</option>
-		                    <option value="{{localize 'libersf.machine'}}">{{localize 'libersf.machine'}}</option>
-		                    <option value="{{localize 'libersf.orqu'}}">{{localize 'libersf.orqu'}}</option>
-	                    {{/select}}
-	                </SELECT>
-	                <input type="button" value="{{localize 'libersf.choisir'}}" class="racechoix" style="width: 40%;padding:5px;float: right;margin: 4px;background: #782e22;color:#ddd;">
-	                <h2 style="margin-top: 20px">{{localize 'libersf.faction'}}</h2>
-					<SELECT class="factionliste" size="1" style="width: 50%; margin: 3px;background: #0d0d0d;color: #fff;" name="system.religion">
-	                    {{#select data.system.religion}}
-		                    <option value="{{localize 'libersf.empire'}}">{{localize 'libersf.empire'}}</option>
-		                    <option value="{{localize 'libersf.pleide'}}">{{localize 'libersf.pleide'}}</option>
-		                    <option value="{{localize 'libersf.omc'}}">{{localize 'libersf.omc'}}</option>
-		                    <option value="{{localize 'libersf.fede'}}">{{localize 'libersf.fede'}}</option>
-		                    <option value="{{localize 'libersf.rebel'}}">{{localize 'libersf.rebel'}}</option>
-		                    <option value="{{localize 'libersf.fan'}}">{{localize 'libersf.fan'}}</option>
-		                {{/select}}
-	                </SELECT>
-	                <input type="button" value="{{localize 'libersf.choisir'}}" class="factionchoix" style="width: 40%;padding:5px;float: right;margin: 4px;background: #782e22;color:#ddd;">
-	                <h2 style="margin-top: 20px">{{localize 'libersf.metier'}}</h2>
-					<SELECT class="metierliste" size="1" style="width: 50%; margin: 3px;background: #0d0d0d;color: #fff;" name="system.metier">
-	                    {{#select data.system.metier}}
-		                    <option value="{{localize 'libersf.metier1'}}">{{localize 'libersf.metier1'}}</option>
-		                    <option value="{{localize 'libersf.metier2'}}">{{localize 'libersf.metier2'}}</option>
-		                    <option value="{{localize 'libersf.metier3'}}">{{localize 'libersf.metier3'}}</option>
-		                    <option value="{{localize 'libersf.metier4'}}">{{localize 'libersf.metier4'}}</option>
-		                    <option value="{{localize 'libersf.metier5'}}">{{localize 'libersf.metier5'}}</option>
-		                    <option value="{{localize 'libersf.metier6'}}">{{localize 'libersf.metier6'}}</option>
-		                    <option value="{{localize 'libersf.metier7'}}">{{localize 'libersf.metier7'}}</option>
-		                    <option value="{{localize 'libersf.metier8'}}">{{localize 'libersf.metier8'}}</option>
-		                    <option value="{{localize 'libersf.metier9'}}">{{localize 'libersf.metier9'}}</option>
-		                {{/select}}
-	                </SELECT>
-	                <input type="button" value="Choisir" class="metierchoix" style="width: 40%;padding:5px;float: right;margin: 4px;background: #782e22;color:#ddd;">
-	                <h2 style="margin-top: 20px">Andromède</h2>
-					<SELECT class="andomedes" size="1" style="width: 50%; margin: 3px;background: #0d0d0d;color: #fff;" name="system.andomedes">
-	                    {{#select data.system.andomedes}}
-		                    <option value="non">Non</option>
-		                    <option value="oui">Oui</option>
-		                {{/select}}
-	                </SELECT>					
-					
+				{{!-- Spell Tab --}}
+				<div id="magie" class="tab items " data-group="primary" data-tab="magie">   
+					<div style="overflow: auto;height: 554px;w">
+						<h2 style="margin-top: 20px">{{localize 'libersf.sort'}}</h2>
+						<ol class="items-list">
+			                <li class="item rexrow item-header">
+			                  <div class="item-image"></div>
+			                  <div class="item-name">{{localize 'libersf.nom'}}</div>
+			                  <div class="item-genre"></div>
+			                  <!--div class="item-description">{{localize 'libersf.descri'}}</div-->               
+			                  <div class="item-portee">{{localize 'libersf.l1'}}</div>
+			                  <div class="item-dommage">{{localize 'libersf.l2'}}</div>
+			                  <div class="item-poids">{{localize 'libersf.l3'}}</div>
+			                  <div class="item-valeur">{{localize 'libersf.l4'}}</div>
+			                  <div class="item-techno">{{localize 'libersf.l5'}}</div>
+			                  <div class="item-qty">{{localize 'libersf.l6'}}</div>
+			                  <div class="item-controls">
+			                    <!--a class="item-control item-create" title="Create item" data-type="armes"><i class="fas fa-plus"></i> Add item</a-->
+			                  </div>
+			                </li>
+			            {{#each actor.sort as |item id|}}
+			                <li class="item rexrow" data-item-id="{{item._id}}">
+			                    <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></div>
+			                    <div class="item-name" title="{{item.name}}">{{item.name}}</div>
+			                    <div class="item-genre" title="{{item.system.genre}}">{{item.system.genre}}</div>
+			                    <div class="item-portee">{{item.system.portee}}</div>
+			                    <!--div class="item-dommage jetdedegat" data-name="{{item.name}}" data-dice="{{item.system.degat}}">{{item.system.degats}}</div-->
+			                    <div class="item-dommage">{{item.system.degats}}</div>
+			                    <div class="item-poid">{{item.system.poids}}</div>
+			                    <div class="item-valeur">{{item.system.valeur}}</div>
+			                    <div class="item-techno">{{item.system.techno}}</div>
+			                    <div class="item-qt">{{item.system.quantite}}</div>
+			                    <div class="item-controls">
+			                    	<span class="item-equip" title="Equipé arme" genre="arme" data-genre="arme" name="{{item.name}}" data-name="{{item.name}}">+</span>
+			                    	<a class="item-control item-desc" title="Desc Sort">&#128712;</a>
+			                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+			                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+			                    </div>
+			                    <div class="item-description" title="{{item.system.description}}">{{item.system.description}}</div>
+
+			                </li>
+			            {{/each}}
+		        		</ol>
+		        	</div>
 				</div>
 			</section>
 		</div>
